parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions -> instruction
Rule 5     instructions -> instructions instruction
Rule 6     instruction -> FOR variable = range_expr instruction
Rule 7     instruction -> WHILE ( condition ) instruction
Rule 8     instruction -> IF ( condition ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 9     instruction -> IF ( condition ) instruction  [precedence=nonassoc, level=1]
Rule 10    instruction -> statement ;
Rule 11    instruction -> assignment ;
Rule 12    instruction -> { instructions }
Rule 13    assignment -> variable DIVASSIGN expression
Rule 14    assignment -> variable MULASSIGN expression
Rule 15    assignment -> variable SUBASSIGN expression
Rule 16    assignment -> variable ADDASSIGN expression
Rule 17    assignment -> variable = expression
Rule 18    statement -> PRINT expressions
Rule 19    statement -> RETURN expression
Rule 20    statement -> CONTINUE
Rule 21    statement -> BREAK
Rule 22    expressions -> expression
Rule 23    expressions -> expressions , expression
Rule 24    condition -> expression NOTEQ expression
Rule 25    condition -> expression EQUALS expression
Rule 26    condition -> expression MOREEQ expression
Rule 27    condition -> expression LESSEQ expression
Rule 28    condition -> expression < expression
Rule 29    condition -> expression > expression
Rule 30    variable -> ID
Rule 31    variable -> ID vector
Rule 32    expression -> vector
Rule 33    expression -> matrix
Rule 34    expression -> ( expression )
Rule 35    expression -> expression '  [precedence=left, level=8]
Rule 36    expression -> - expression  [precedence=right, level=7]
Rule 37    expression -> expression DOTDIV expression  [precedence=left, level=6]
Rule 38    expression -> expression DOTMUL expression  [precedence=left, level=6]
Rule 39    expression -> expression DOTSUB expression  [precedence=left, level=4]
Rule 40    expression -> expression DOTADD expression  [precedence=left, level=4]
Rule 41    expression -> expression / expression  [precedence=left, level=5]
Rule 42    expression -> expression * expression  [precedence=left, level=5]
Rule 43    expression -> expression - expression  [precedence=left, level=3]
Rule 44    expression -> expression + expression  [precedence=left, level=3]
Rule 45    expression -> variable
Rule 46    expression -> number
Rule 47    expression -> STRING
Rule 48    number -> FLOATNUM
Rule 49    number -> INTNUM
Rule 50    vector -> [ numbers ]
Rule 51    numbers -> number
Rule 52    numbers -> numbers , number
Rule 53    matrix -> EYE ( INTNUM )
Rule 54    matrix -> ONES ( INTNUM )
Rule 55    matrix -> ZEROS ( INTNUM )
Rule 56    matrix -> [ vectors ]
Rule 57    vectors -> vector
Rule 58    vectors -> vectors , vector
Rule 59    range_expr -> range_value : range_value
Rule 60    range_value -> variable
Rule 61    range_value -> INTNUM

Terminals, with rules where they appear:

'                    : 35
(                    : 7 8 9 34 53 54 55
)                    : 7 8 9 34 53 54 55
*                    : 42
+                    : 44
,                    : 23 52 58
-                    : 36 43
/                    : 41
:                    : 59
;                    : 10 11
<                    : 28
=                    : 6 17
>                    : 29
ADDASSIGN            : 16
BREAK                : 21
CONTINUE             : 20
DIVASSIGN            : 13
DOTADD               : 40
DOTDIV               : 37
DOTMUL               : 38
DOTSUB               : 39
ELSE                 : 8
EQUALS               : 25
EYE                  : 53
FLOATNUM             : 48
FOR                  : 6
ID                   : 30 31
IF                   : 8 9
INTNUM               : 49 53 54 55 61
LESSEQ               : 27
MOREEQ               : 26
MULASSIGN            : 14
NOTEQ                : 24
ONES                 : 54
PRINT                : 18
RETURN               : 19
STRING               : 47
SUBASSIGN            : 15
WHILE                : 7
ZEROS                : 55
[                    : 50 56
]                    : 50 56
error                : 
{                    : 12
}                    : 12

Nonterminals, with rules where they appear:

assignment           : 11
condition            : 7 8 9
expression           : 13 14 15 16 17 19 22 23 24 24 25 25 26 26 27 27 28 28 29 29 34 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44
expressions          : 18 23
instruction          : 4 5 6 7 8 8 9
instructions         : 3 5 12
instructions_opt     : 1
matrix               : 33
number               : 46 51 52
numbers              : 50 52
program              : 0
range_expr           : 6
range_value          : 59 59
statement            : 10
variable             : 6 13 14 15 16 17 45 60
vector               : 31 32 57 58
vectors              : 56 58


state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> .
    (3) instructions_opt -> . instructions
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . FOR variable = range_expr instruction
    (7) instruction -> . WHILE ( condition ) instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . statement ;
    (11) instruction -> . assignment ;
    (12) instruction -> . { instructions }
    (18) statement -> . PRINT expressions
    (19) statement -> . RETURN expression
    (20) statement -> . CONTINUE
    (21) statement -> . BREAK
    (13) assignment -> . variable DIVASSIGN expression
    (14) assignment -> . variable MULASSIGN expression
    (15) assignment -> . variable SUBASSIGN expression
    (16) assignment -> . variable ADDASSIGN expression
    (17) assignment -> . variable = expression
    (30) variable -> . ID
    (31) variable -> . ID vector
    $end            reduce using rule 2 (instructions_opt -> .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 12
    RETURN          shift and go to state 13
    CONTINUE        shift and go to state 14
    BREAK           shift and go to state 15
    ID              shift and go to state 16

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    variable                       shift and go to state 6
    statement                      shift and go to state 9
    assignment                     shift and go to state 10

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_opt .
    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (6) instruction -> . FOR variable = range_expr instruction
    (7) instruction -> . WHILE ( condition ) instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . statement ;
    (11) instruction -> . assignment ;
    (12) instruction -> . { instructions }
    (18) statement -> . PRINT expressions
    (19) statement -> . RETURN expression
    (20) statement -> . CONTINUE
    (21) statement -> . BREAK
    (13) assignment -> . variable DIVASSIGN expression
    (14) assignment -> . variable MULASSIGN expression
    (15) assignment -> . variable SUBASSIGN expression
    (16) assignment -> . variable ADDASSIGN expression
    (17) assignment -> . variable = expression
    (30) variable -> . ID
    (31) variable -> . ID vector
    $end            reduce using rule 3 (instructions_opt -> instructions .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 12
    RETURN          shift and go to state 13
    CONTINUE        shift and go to state 14
    BREAK           shift and go to state 15
    ID              shift and go to state 16

    instruction                    shift and go to state 17
    variable                       shift and go to state 6
    statement                      shift and go to state 9
    assignment                     shift and go to state 10

state 4

    (4) instructions -> instruction .
    FOR             reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    {               reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 5

    (6) instruction -> FOR . variable = range_expr instruction
    (30) variable -> . ID
    (31) variable -> . ID vector
    ID              shift and go to state 16

    variable                       shift and go to state 18

state 6

    (13) assignment -> variable . DIVASSIGN expression
    (14) assignment -> variable . MULASSIGN expression
    (15) assignment -> variable . SUBASSIGN expression
    (16) assignment -> variable . ADDASSIGN expression
    (17) assignment -> variable . = expression
    DIVASSIGN       shift and go to state 19
    MULASSIGN       shift and go to state 20
    SUBASSIGN       shift and go to state 21
    ADDASSIGN       shift and go to state 22
    =               shift and go to state 23


state 7

    (7) instruction -> WHILE . ( condition ) instruction
    (               shift and go to state 24


state 8

    (8) instruction -> IF . ( condition ) instruction ELSE instruction
    (9) instruction -> IF . ( condition ) instruction
    (               shift and go to state 25


state 9

    (10) instruction -> statement . ;
    ;               shift and go to state 26


state 10

    (11) instruction -> assignment . ;
    ;               shift and go to state 27


state 11

    (12) instruction -> { . instructions }
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . FOR variable = range_expr instruction
    (7) instruction -> . WHILE ( condition ) instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . statement ;
    (11) instruction -> . assignment ;
    (12) instruction -> . { instructions }
    (18) statement -> . PRINT expressions
    (19) statement -> . RETURN expression
    (20) statement -> . CONTINUE
    (21) statement -> . BREAK
    (13) assignment -> . variable DIVASSIGN expression
    (14) assignment -> . variable MULASSIGN expression
    (15) assignment -> . variable SUBASSIGN expression
    (16) assignment -> . variable ADDASSIGN expression
    (17) assignment -> . variable = expression
    (30) variable -> . ID
    (31) variable -> . ID vector
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 12
    RETURN          shift and go to state 13
    CONTINUE        shift and go to state 14
    BREAK           shift and go to state 15
    ID              shift and go to state 16

    instructions                   shift and go to state 28
    instruction                    shift and go to state 4
    variable                       shift and go to state 6
    statement                      shift and go to state 9
    assignment                     shift and go to state 10

state 12

    (18) statement -> PRINT . expressions
    (22) expressions -> . expression
    (23) expressions -> . expressions , expression
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . ( expression )
    (35) expression -> . expression '
    (36) expression -> . - expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . expression DOTMUL expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTADD expression
    (41) expression -> . expression / expression
    (42) expression -> . expression * expression
    (43) expression -> . expression - expression
    (44) expression -> . expression + expression
    (45) expression -> . variable
    (46) expression -> . number
    (47) expression -> . STRING
    (50) vector -> . [ numbers ]
    (53) matrix -> . EYE ( INTNUM )
    (54) matrix -> . ONES ( INTNUM )
    (55) matrix -> . ZEROS ( INTNUM )
    (56) matrix -> . [ vectors ]
    (30) variable -> . ID
    (31) variable -> . ID vector
    (48) number -> . FLOATNUM
    (49) number -> . INTNUM
    (               shift and go to state 33
    -               shift and go to state 34
    STRING          shift and go to state 37
    [               shift and go to state 38
    EYE             shift and go to state 39
    ONES            shift and go to state 41
    ZEROS           shift and go to state 42
    ID              shift and go to state 16
    FLOATNUM        shift and go to state 43
    INTNUM          shift and go to state 40

    expressions                    shift and go to state 29
    expression                     shift and go to state 30
    vector                         shift and go to state 31
    matrix                         shift and go to state 32
    variable                       shift and go to state 35
    number                         shift and go to state 36

state 13

    (19) statement -> RETURN . expression
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . ( expression )
    (35) expression -> . expression '
    (36) expression -> . - expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . expression DOTMUL expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTADD expression
    (41) expression -> . expression / expression
    (42) expression -> . expression * expression
    (43) expression -> . expression - expression
    (44) expression -> . expression + expression
    (45) expression -> . variable
    (46) expression -> . number
    (47) expression -> . STRING
    (50) vector -> . [ numbers ]
    (53) matrix -> . EYE ( INTNUM )
    (54) matrix -> . ONES ( INTNUM )
    (55) matrix -> . ZEROS ( INTNUM )
    (56) matrix -> . [ vectors ]
    (30) variable -> . ID
    (31) variable -> . ID vector
    (48) number -> . FLOATNUM
    (49) number -> . INTNUM
    (               shift and go to state 33
    -               shift and go to state 34
    STRING          shift and go to state 37
    [               shift and go to state 38
    EYE             shift and go to state 39
    ONES            shift and go to state 41
    ZEROS           shift and go to state 42
    ID              shift and go to state 16
    FLOATNUM        shift and go to state 43
    INTNUM          shift and go to state 40

    expression                     shift and go to state 44
    vector                         shift and go to state 31
    matrix                         shift and go to state 32
    variable                       shift and go to state 35
    number                         shift and go to state 36

state 14

    (20) statement -> CONTINUE .
    ;               reduce using rule 20 (statement -> CONTINUE .)


state 15

    (21) statement -> BREAK .
    ;               reduce using rule 21 (statement -> BREAK .)


state 16

    (30) variable -> ID .
    (31) variable -> ID . vector
    (50) vector -> . [ numbers ]
    DIVASSIGN       reduce using rule 30 (variable -> ID .)
    MULASSIGN       reduce using rule 30 (variable -> ID .)
    SUBASSIGN       reduce using rule 30 (variable -> ID .)
    ADDASSIGN       reduce using rule 30 (variable -> ID .)
    =               reduce using rule 30 (variable -> ID .)
    '               reduce using rule 30 (variable -> ID .)
    DOTDIV          reduce using rule 30 (variable -> ID .)
    DOTMUL          reduce using rule 30 (variable -> ID .)
    DOTSUB          reduce using rule 30 (variable -> ID .)
    DOTADD          reduce using rule 30 (variable -> ID .)
    /               reduce using rule 30 (variable -> ID .)
    *               reduce using rule 30 (variable -> ID .)
    -               reduce using rule 30 (variable -> ID .)
    +               reduce using rule 30 (variable -> ID .)
    ,               reduce using rule 30 (variable -> ID .)
    ;               reduce using rule 30 (variable -> ID .)
    NOTEQ           reduce using rule 30 (variable -> ID .)
    EQUALS          reduce using rule 30 (variable -> ID .)
    MOREEQ          reduce using rule 30 (variable -> ID .)
    LESSEQ          reduce using rule 30 (variable -> ID .)
    <               reduce using rule 30 (variable -> ID .)
    >               reduce using rule 30 (variable -> ID .)
    )               reduce using rule 30 (variable -> ID .)
    :               reduce using rule 30 (variable -> ID .)
    FOR             reduce using rule 30 (variable -> ID .)
    WHILE           reduce using rule 30 (variable -> ID .)
    IF              reduce using rule 30 (variable -> ID .)
    {               reduce using rule 30 (variable -> ID .)
    PRINT           reduce using rule 30 (variable -> ID .)
    RETURN          reduce using rule 30 (variable -> ID .)
    CONTINUE        reduce using rule 30 (variable -> ID .)
    BREAK           reduce using rule 30 (variable -> ID .)
    ID              reduce using rule 30 (variable -> ID .)
    [               shift and go to state 46

    vector                         shift and go to state 45

state 17

    (5) instructions -> instructions instruction .
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    IF              reduce using rule 5 (instructions -> instructions instruction .)
    {               reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 18

    (6) instruction -> FOR variable . = range_expr instruction
    =               shift and go to state 47


state 19

    (13) assignment -> variable DIVASSIGN . expression
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . ( expression )
    (35) expression -> . expression '
    (36) expression -> . - expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . expression DOTMUL expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTADD expression
    (41) expression -> . expression / expression
    (42) expression -> . expression * expression
    (43) expression -> . expression - expression
    (44) expression -> . expression + expression
    (45) expression -> . variable
    (46) expression -> . number
    (47) expression -> . STRING
    (50) vector -> . [ numbers ]
    (53) matrix -> . EYE ( INTNUM )
    (54) matrix -> . ONES ( INTNUM )
    (55) matrix -> . ZEROS ( INTNUM )
    (56) matrix -> . [ vectors ]
    (30) variable -> . ID
    (31) variable -> . ID vector
    (48) number -> . FLOATNUM
    (49) number -> . INTNUM
    (               shift and go to state 33
    -               shift and go to state 34
    STRING          shift and go to state 37
    [               shift and go to state 38
    EYE             shift and go to state 39
    ONES            shift and go to state 41
    ZEROS           shift and go to state 42
    ID              shift and go to state 16
    FLOATNUM        shift and go to state 43
    INTNUM          shift and go to state 40

    variable                       shift and go to state 35
    expression                     shift and go to state 48
    vector                         shift and go to state 31
    matrix                         shift and go to state 32
    number                         shift and go to state 36

state 20

    (14) assignment -> variable MULASSIGN . expression
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . ( expression )
    (35) expression -> . expression '
    (36) expression -> . - expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . expression DOTMUL expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTADD expression
    (41) expression -> . expression / expression
    (42) expression -> . expression * expression
    (43) expression -> . expression - expression
    (44) expression -> . expression + expression
    (45) expression -> . variable
    (46) expression -> . number
    (47) expression -> . STRING
    (50) vector -> . [ numbers ]
    (53) matrix -> . EYE ( INTNUM )
    (54) matrix -> . ONES ( INTNUM )
    (55) matrix -> . ZEROS ( INTNUM )
    (56) matrix -> . [ vectors ]
    (30) variable -> . ID
    (31) variable -> . ID vector
    (48) number -> . FLOATNUM
    (49) number -> . INTNUM
    (               shift and go to state 33
    -               shift and go to state 34
    STRING          shift and go to state 37
    [               shift and go to state 38
    EYE             shift and go to state 39
    ONES            shift and go to state 41
    ZEROS           shift and go to state 42
    ID              shift and go to state 16
    FLOATNUM        shift and go to state 43
    INTNUM          shift and go to state 40

    variable                       shift and go to state 35
    expression                     shift and go to state 49
    vector                         shift and go to state 31
    matrix                         shift and go to state 32
    number                         shift and go to state 36

state 21

    (15) assignment -> variable SUBASSIGN . expression
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . ( expression )
    (35) expression -> . expression '
    (36) expression -> . - expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . expression DOTMUL expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTADD expression
    (41) expression -> . expression / expression
    (42) expression -> . expression * expression
    (43) expression -> . expression - expression
    (44) expression -> . expression + expression
    (45) expression -> . variable
    (46) expression -> . number
    (47) expression -> . STRING
    (50) vector -> . [ numbers ]
    (53) matrix -> . EYE ( INTNUM )
    (54) matrix -> . ONES ( INTNUM )
    (55) matrix -> . ZEROS ( INTNUM )
    (56) matrix -> . [ vectors ]
    (30) variable -> . ID
    (31) variable -> . ID vector
    (48) number -> . FLOATNUM
    (49) number -> . INTNUM
    (               shift and go to state 33
    -               shift and go to state 34
    STRING          shift and go to state 37
    [               shift and go to state 38
    EYE             shift and go to state 39
    ONES            shift and go to state 41
    ZEROS           shift and go to state 42
    ID              shift and go to state 16
    FLOATNUM        shift and go to state 43
    INTNUM          shift and go to state 40

    variable                       shift and go to state 35
    expression                     shift and go to state 50
    vector                         shift and go to state 31
    matrix                         shift and go to state 32
    number                         shift and go to state 36

state 22

    (16) assignment -> variable ADDASSIGN . expression
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . ( expression )
    (35) expression -> . expression '
    (36) expression -> . - expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . expression DOTMUL expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTADD expression
    (41) expression -> . expression / expression
    (42) expression -> . expression * expression
    (43) expression -> . expression - expression
    (44) expression -> . expression + expression
    (45) expression -> . variable
    (46) expression -> . number
    (47) expression -> . STRING
    (50) vector -> . [ numbers ]
    (53) matrix -> . EYE ( INTNUM )
    (54) matrix -> . ONES ( INTNUM )
    (55) matrix -> . ZEROS ( INTNUM )
    (56) matrix -> . [ vectors ]
    (30) variable -> . ID
    (31) variable -> . ID vector
    (48) number -> . FLOATNUM
    (49) number -> . INTNUM
    (               shift and go to state 33
    -               shift and go to state 34
    STRING          shift and go to state 37
    [               shift and go to state 38
    EYE             shift and go to state 39
    ONES            shift and go to state 41
    ZEROS           shift and go to state 42
    ID              shift and go to state 16
    FLOATNUM        shift and go to state 43
    INTNUM          shift and go to state 40

    variable                       shift and go to state 35
    expression                     shift and go to state 51
    vector                         shift and go to state 31
    matrix                         shift and go to state 32
    number                         shift and go to state 36

state 23

    (17) assignment -> variable = . expression
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . ( expression )
    (35) expression -> . expression '
    (36) expression -> . - expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . expression DOTMUL expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTADD expression
    (41) expression -> . expression / expression
    (42) expression -> . expression * expression
    (43) expression -> . expression - expression
    (44) expression -> . expression + expression
    (45) expression -> . variable
    (46) expression -> . number
    (47) expression -> . STRING
    (50) vector -> . [ numbers ]
    (53) matrix -> . EYE ( INTNUM )
    (54) matrix -> . ONES ( INTNUM )
    (55) matrix -> . ZEROS ( INTNUM )
    (56) matrix -> . [ vectors ]
    (30) variable -> . ID
    (31) variable -> . ID vector
    (48) number -> . FLOATNUM
    (49) number -> . INTNUM
    (               shift and go to state 33
    -               shift and go to state 34
    STRING          shift and go to state 37
    [               shift and go to state 38
    EYE             shift and go to state 39
    ONES            shift and go to state 41
    ZEROS           shift and go to state 42
    ID              shift and go to state 16
    FLOATNUM        shift and go to state 43
    INTNUM          shift and go to state 40

    variable                       shift and go to state 35
    expression                     shift and go to state 52
    vector                         shift and go to state 31
    matrix                         shift and go to state 32
    number                         shift and go to state 36

state 24

    (7) instruction -> WHILE ( . condition ) instruction
    (24) condition -> . expression NOTEQ expression
    (25) condition -> . expression EQUALS expression
    (26) condition -> . expression MOREEQ expression
    (27) condition -> . expression LESSEQ expression
    (28) condition -> . expression < expression
    (29) condition -> . expression > expression
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . ( expression )
    (35) expression -> . expression '
    (36) expression -> . - expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . expression DOTMUL expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTADD expression
    (41) expression -> . expression / expression
    (42) expression -> . expression * expression
    (43) expression -> . expression - expression
    (44) expression -> . expression + expression
    (45) expression -> . variable
    (46) expression -> . number
    (47) expression -> . STRING
    (50) vector -> . [ numbers ]
    (53) matrix -> . EYE ( INTNUM )
    (54) matrix -> . ONES ( INTNUM )
    (55) matrix -> . ZEROS ( INTNUM )
    (56) matrix -> . [ vectors ]
    (30) variable -> . ID
    (31) variable -> . ID vector
    (48) number -> . FLOATNUM
    (49) number -> . INTNUM
    (               shift and go to state 33
    -               shift and go to state 34
    STRING          shift and go to state 37
    [               shift and go to state 38
    EYE             shift and go to state 39
    ONES            shift and go to state 41
    ZEROS           shift and go to state 42
    ID              shift and go to state 16
    FLOATNUM        shift and go to state 43
    INTNUM          shift and go to state 40

    condition                      shift and go to state 53
    expression                     shift and go to state 54
    vector                         shift and go to state 31
    matrix                         shift and go to state 32
    variable                       shift and go to state 35
    number                         shift and go to state 36

state 25

    (8) instruction -> IF ( . condition ) instruction ELSE instruction
    (9) instruction -> IF ( . condition ) instruction
    (24) condition -> . expression NOTEQ expression
    (25) condition -> . expression EQUALS expression
    (26) condition -> . expression MOREEQ expression
    (27) condition -> . expression LESSEQ expression
    (28) condition -> . expression < expression
    (29) condition -> . expression > expression
    (32) expression -> . vector
    (33) expression -> . matrix
    (34) expression -> . ( expression )
    (35) expression -> . expression '
    (36) expression -> . - expression
    (37) expression -> . expression DOTDIV expression
    (38) expression -> . expression DOTMUL expression
    (39) expression -> . expression DOTSUB expression
    (40) expression -> . expression DOTADD expression
    (41) expression -> . expression / expression
    (42) expression -> . expression * expression
    (43) expression -> . expression - expression
    (44) expression -> . expression + expression
    (45) expression -> . variable
    (46) expression -> . number
    (47) expression -> . STRING
    (50) vector -> . [ numbers ]
    (53) matrix -> . EYE ( INTNUM )
    (54) matrix -> . ONES ( INTNUM )
    (55) matrix -> . ZEROS ( INTNUM )
    (56) matrix -> . [ vectors ]
    (30) variable -> . ID
    (31) variable -> . ID vector
    (48) number -> . FLOATNUM
    (49) number -> . INTNUM
    (               shift and go to state 33
    -               shift and go to state 34
    STRING          shift and go to state 37
    [               shift and go to state 38
    EYE             shift and go to state 39
    ONES            shift and go to state 41
    ZEROS           shift and go to state 42
    ID              shift and go to state 16
    FLOATNUM        shift and go to state 43
    INTNUM          shift and go to state 40

    condition                      shift and go to state 55
    expression                     shift and go to state 54
    vector                         shift and go to state 31
    matrix                         shift and go to state 32
    variable                       shift and go to state 35
    number                         shift and go to state 36

state 26

    (10) instruction -> statement ; .
    FOR             reduce using rule 10 (instruction -> statement ; .)
    WHILE           reduce using rule 10 (instruction -> statement ; .)
    IF              reduce using rule 10 (instruction -> statement ; .)
    {               reduce using rule 10 (instruction -> statement ; .)
    PRINT           reduce using rule 10 (instruction -> statement ; .)
    RETURN          reduce using rule 10 (instruction -> statement ; .)
    CONTINUE        reduce using rule 10 (instruction -> statement ; .)
    BREAK           reduce using rule 10 (instruction -> statement ; .)
    ID              reduce using rule 10 (instruction -> statement ; .)
    $end            reduce using rule 10 (instruction -> statement ; .)
    }               reduce using rule 10 (instruction -> statement ; .)
    ELSE            reduce using rule 10 (instruction -> statement ; .)


state 27

    (11) instruction -> assignment ; .
    FOR             reduce using rule 11 (instruction -> assignment ; .)
    WHILE           reduce using rule 11 (instruction -> assignment ; .)
    IF              reduce using rule 11 (instruction -> assignment ; .)
    {               reduce using rule 11 (instruction -> assignment ; .)
    PRINT           reduce using rule 11 (instruction -> assignment ; .)
    RETURN          reduce using rule 11 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 11 (instruction -> assignment ; .)
    BREAK           reduce using rule 11 (instruction -> assignment ; .)
    ID              reduce using rule 11 (instruction -> assignment ; .)
    $end            reduce using rule 11 (instruction -> assignment ; .)
    }               reduce using rule 11 (instruction -> assignment ; .)
    ELSE            reduce using rule 11 (instruction -> assignment ; .)


state 28

    (12) instruction -> { instructions . }
    (5) instructions -> instructions . instruction
    (6) instruction -> . FOR variable = range_expr instruction
    (7) instruction -> . WHILE ( condition ) instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . statement ;
    (11) instruction -> . assignment ;
    (12) instruction -> . { instructions }
    (18) statement -> . PRINT expressions
    (19) statement -> . RETURN expression
    (20) statement -> . CONTINUE
    (21) statement -> . BREAK
    (13) assignment -> . variable DIVASSIGN expression
    (14) assignment -> . variable MULASSIGN expression
    (15) assignment -> . variable SUBASSIGN expression
    (16) assignment -> . variable ADDASSIGN expression
    (17) assignment -> . variable = expression
    (30) variable -> . ID
    (31) variable -> . ID vector
    }               shift and go to state 56
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 12
    RETURN          shift and go to state 13
    CONTINUE        shift and go to state 14
    BREAK           shift and go to state 15
    ID              shift and go to state 16

    instruction                    shift and go to state 17
    variable                       shift and go to state 6
    statement                      shift and go to state 9
    assignment                     shift and go to state 10

state 29

    (18) statement -> PRINT expressions .
    (23) expressions -> expressions . , expression
    ;               reduce using rule 18 (statement -> PRINT expressions .)
    ,               shift and go to state 57


state 30

    (22) expressions -> expression .
    (35) expression -> expression . '
    (37) expression -> expression . DOTDIV expression
    (38) expression -> expression . DOTMUL expression
    (39) expression -> expression . DOTSUB expression
    (40) expression -> expression . DOTADD expression
    (41) expression -> expression . / expression
    (42) expression -> expression . * expression
    (43) expression -> expression . - expression
    (44) expression -> expression . + expression
    ,               reduce using rule 22 (expressions -> expression .)
    ;               reduce using rule 22 (expressions -> expression .)
    '               shift and go to state 58
    DOTDIV          shift and go to state 59
    DOTMUL          shift and go to state 60
    DOTSUB          shift and go to state 61
    DOTADD          shift and go to state 62
    /               shift and go to state 63
    *               shift and go to state 64
    -               shift and go to state 65
    +               shift and go to state 66


state 31

    (32) expression -> vector .
    '               reduce using rule 32 (expression -> vector .)
    DOTDIV          reduce using rule 32 (expression -> vector .)
    DOTMUL          reduce using rule 32 (expression -> vector .)
    DOTSUB          reduce using rule 32 (expression -> vector .)
    DOTADD          reduce using rule 32 (expression -> vector .)
    /               reduce using rule 32 (expression -> vector .)
    *               reduce using rule 32 (expression -> vector .)
    -               reduce using rule 32 (expression -> vector .)
    +               reduce using rule 32 (expression -> vector .)
    ,               reduce using rule 32 (expression -> vector .)
    ;               reduce using rule 32 (expression -> vector .)
    NOTEQ           reduce using rule 32 (expression -> vector .)
    EQUALS          reduce using rule 32 (expression -> vector .)
    MOREEQ          reduce using rule 32 (expression -> vector .)
    LESSEQ          reduce using rule 32 (expression -> vector .)
    <               reduce using rule 32 (expression -> vector .)
    >               reduce using rule 32 (expression -> vector .)
    )               reduce using rule 32 (expression -> vector .)


state 32

    (33) expression -> matrix .
    '               reduce using rule 33 (expression -> matrix .)
    DOTDIV          reduce using rule 33 (expression -> matrix .)
    DOTMUL          reduce using rule 33 (expression -> matrix .)
    DOTSUB          reduce using rule 33 (expression -> matrix .)
    DOTADD          reduce using rule 33 (expression -> matrix .)
    /               reduce using rule 33 (expression -> matrix .)
    *               reduce using rule 33 (expression -> matrix .)
    -               reduce using rule 33 (expression -> matrix .)
    +               reduce using rule 33 (expression -> matrix .)
    ,               reduce using rule 33 (expression -> matrix .)
    ;               reduce using rule 33 (expression -> matrix .)
    NOTEQ           reduce using rule 33 (expression -> matrix .)
    EQUALS          reduce using rule 33 (expression -> matrix .)
    MOREEQ          reduce using rule 33 (expression -> matrix .)
    LESSEQ          reduce using rule 33 (expression -> matrix .)
    <               reduce using rule 33 (expression -> matrix .)
    >               reduce using rule 33 (expression -> matrix .)
    )               reduce using rule 33 (expression -> matrix .)


state 33
